--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.74.0",
     "@vercel/analytics": "^1.6.1",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "react": "19.2.3",
